2019-06-28
**********
Get-SD_DatorerGAIAKontoLåstsVid - Resultat sorteras nu
Get-SD_DistExporteraFrånFleraTillExcel - Testar nu om grupp finns, innan skriptet fortsätter
Get-SD_FunkBehörigheter - Skriver nu även ut GrantSendOnBehalfTo
Search-SD_GemObjektMedOrdINamnet - Rättade sökvilkoren för Exchange-kontaktobjekt / Sorterar nu resultatet
Set-SD_DistÖppnaFörExterna - Ny. Öppna distributionslista för extern kontakt
Sync-SD_FunkAzureTillExchange - Ändrat hur GrantSendOnBehalfTo tilldelas / Skriver nu ut lista över vilka som synkroniserats

2019-06-20
**********
Add-SD_AnvändareAutosvar - Rättat dokumentationen
Add-SD_AnvändareTillO365MigPilot - Rättat dokumentationen
Add-SD_ResursTillGrupp - Rättat och utökat dokumentationen
Add-SD_RumBokaEnAnvändare - Rättat och utökat dokumentationen
Add-SD_RumBokaFleraAnvändare - Rättat och utökat dokumentationen
Compare-SD_ObjektProperties - Rättat och utökat dokumentationen
Confirm-SD_AnvändareEMSLicenserFrånExcelLista - Rättat och utökat dokumentationen
Confirm-SD_AnvändareKontoStatus - Rättat och utökat dokumentationen
Confirm-SD_AnvändareMedlemIAzureGrupp - Rättat och utökat dokumentationen
Confirm-SD_AnvändareMedlemIFunktionsbrevlåda - Rättat och utökat dokumentationen
Confirm-SD_AnvändaremsExchMailboxGuid - Rättat och utökat dokumentationen
Confirm-SD_GemAzureSynkatTillExchange - Rättat och utökat dokumentationen
Connect-SD_ToServices - Rättat och utökat dokumentationen
Copy-SD_KopieraSkriptTillG - Stänger nu progressbar korrekt / Rättat och utökat dokumentationen
Copy-SD_RumBehörighetFrånAnnatRum - Rättat och utökat dokumentationen
Edit-SD_AdminBehörigheter - Rättat och utökat dokumentationen
Get-SD_AnvändareGruppmedlemskap - Rättat och utökat dokumentationen / Rättat hämtningen av gruppmedlemskap
Get-SD_AnvändareOmbud - Rättat och utökat dokumentationen
Get-SD_AnvändareÄgareDistributionslistor - Rättat och utökat dokumentationen
Get-SD_AnvändareÄgareFunktionsbrevlådor - Rättat och utökat dokumentationen