@@ -33,23 +33,25 @@ function Update-SD_Distributionslista
 
 	$data | foreach {
 		$group = $_.Group
-		if ($_.Action.Trim() -eq "Add")
+		$emailToProcess = $_.Email.Trim()
+		$action = $_.Action.Trim()
+		if ($action -eq "Add")
 		{
 			Write-Host "($ticker av $numberOfEntries) Lägg till " -NoNewline
-			Write-Host $_.Email.Trim() -Foreground Cyan -NoNewline
+			Write-Host $emailToProcess -Foreground Cyan -NoNewline
 			Write-Host " i distributionslistan " -NoNewline
 			Write-Host $group -Foreground Cyan
-		} elseif ($_.Action.Trim() -eq "Remove") {
+		} elseif ($action -eq "Remove") {
 			Write-Host "($ticker av $numberOfEntries) Ta bort " -NoNewline
-			Write-Host $_.Email.Trim() -Foreground Cyan -NoNewline
+			Write-Host $emailToProcess -Foreground Cyan -NoNewline
 			Write-Host " från distributionslistan " -NoNewline
 			Write-Host $group -Foreground Cyan
 		} else {
-			Write-Host "($ticker av $numberOfEntries) $($_.Action.Trim()) " -NoNewline
-			Write-Host $_.Email.Trim() -Foreground Cyan -NoNewline
+			Write-Host "($ticker av $numberOfEntries) $action " -NoNewline
+			Write-Host $emailToProcess -Foreground Cyan -NoNewline
 			Write-Host " på distributionslistan " -NoNewline
 			Write-Host $group -Foreground Cyan
-			Write-Host "`tAngiven action '$($_.Action.Trim())' följer inte standard och rad $($ticker+1) i Excel-filen kommer inte hanteras.`n"
+			Write-Host "`tAngiven action '$action' följer inte standard och rad $($ticker+1) i Excel-filen kommer inte hanteras.`n"
 			return
 		}
 
@@ -60,18 +62,27 @@ function Update-SD_Distributionslista
 			Write-Host "Distributionslista '$group' finns inte i Exchange.`n"
 			return
 		}
-		if ($_.Action.Trim() -eq "Add")
+		if ($action -eq "Add")
 		{
 		#region Add user
-			$emailToAdd = $_.Email.Trim()
 			#region Create contact object
-			if((Get-Mailbox -Identity $emailToAdd -ErrorAction SilentlyContinue) -or (Get-Contact -Identity $emailToAdd -ErrorAction SilentlyContinue))
+			if ($emailToProcess.EndsWith("test.com"))
 			{
-				Write-Host "`tAdress finns i Exchange." -Foreground Green
-			} else {
+				if (Get-Mailbox -Identity $emailToProcess -ErrorAction SilentlyContinue)
+				{
+					Write-Host "`tAdress finns i Exchange." -Foreground Green
+				} elseif (Get-MailUser -Identity $emailToProcess -ErrorAction SilentlyContinue) {
+					Write-Host "`tAdress finns i Exchange." -Foreground Green
+				} elseif (Get-Contact -Identity $emailToProcess -ErrorAction SilentlyContinue) {
+					Write-Host "`tAdress finns i Exchange." -Foreground Green
+				} else {
+					Write-Host "`tAdress finns inte i Exchange.`nHoppar över $emailToProcess" -Foreground Red
+					$foreach.MoveNext()
+				}
+			} elseif (-not (Get-Contact -Identity $emailToProcess -ErrorAction SilentlyContinue)) {
 				Write-Host "`tInget kontaktobjekt hittades i Exchange, skapar" -Foreground Cyan
-				New-MailContact -Name $emailToAdd -ExternalEmailAddress $emailToAdd | Out-Null
-				Set-MailContact -Identity $emailToAdd -HiddenFromAddressListsEnabled $true | Out-Null
+				New-MailContact -Name $emailToProcess -ExternalEmailAddress $emailToProcess | Out-Null
+				Set-MailContact -Identity $emailToProcess -HiddenFromAddressListsEnabled $true | Out-Null
 				Write-Host "`tKontaktobjekt skapat." -Foreground Green
 			}
 			#endregion Create contact object
@@ -79,17 +90,19 @@ function Update-SD_Distributionslista
 			Write-Host "`tLägger till i distributionslista" -Foreground Cyan
 			try
 			{
-				Add-DistributionGroupMember -Identity $azureGroup.Identity -Member $emailToAdd -ErrorAction Stop
+				Add-DistributionGroupMember -Identity $azureGroup.Identity -Member $emailToProcess -ErrorAction Stop
 				Write-Host "`tAdress tillagd"
 			} catch {
-				if( $_.CategoryInfo.Reason -eq "MemberAlreadyExistsException") {
+				if ( $_.CategoryInfo.Reason -eq "MemberAlreadyExistsException") {
 					Write-Host "`tMailadress finns redan i distributionslistan`n" -Foreground Red
+				} elseif ($_.CategoryInfo.Reason -eq "ManagementObjectAmbiguousException") {
+					Write-Host "`tProblem att lägga till $emailToProcess, lägg till det manuellt`n" -Foreground Red
 				} else {
 					$_
 				}
 			}
 		#endregion Add user
-		} elseif ($_.Action.Trim() -eq "Remove") {
+		} elseif ($action -eq "Remove") {
 		#region Remove user
 			Write-Host "`tTar bort adress från distributionslista" -Foreground Yellow
 			Remove-DistributionGroupMember -Identity $group.Trim() -Member $_.Email -Confirm:$false -ErrorAction SilentlyContinue
